--- a/source-css/comeinside.css
+++ b/source-css/comeinside.css
@@ -531,7 +531,7 @@ a.author[href$=EvanMacIan]:before {content:"Mr. Califag MacIan"}
 a.author[href$=SirCinnamon]:before {content:"King Cinnamon"}
 a.author[href$=XelNaga]:before {content:"Princess Twi`Naga"}
 a.author[href$=Princess_Molestia_]:before {content:"Princess Molestia"}
-a.author[href$=V17Ds]:before {content:"SkiftSwii"}
+a.author[href$=V17Ds]:before {content:"terra"}
 a.author[href$=ZZW30]:before {content:"CaptChuckles"}
 a.author[href$="derram_2"]:before {content:"derram"}
 a.author[href$=CodenameToon]:before {content:"Coggler"}
