--- a/source-css/daylightemotes.css
+++ b/source-css/daylightemotes.css
@@ -626,6 +626,21 @@ a[href="/seriouslydiscord"] {
     background-position: -350px -0px
     }
 
+
+a[href="/mantispony"]{
+    display: block;
+    clear: none;
+    float: left;
+    width: 100px;
+    height: 108px;
+    background-image: url(%%you-touch-this-and-ill-cut-you-darkle%%) !important
+    }
+
+a[href="/mantispony"] {
+    background-position: -350px -200px
+    }
+
+
 a[href="/joydragon"]{
     display: block;
     clear: none;
@@ -651,15 +666,3 @@ a[href="/coggler"] {
     background-position: -0px -0px
     }
 
-
-a[href="/Elcaro"]{
-    display: block;
-    clear: none;
-    float: left;
-    width: 482px;
-    height: 323px;
-    background-image: url(%%Elcaro%%) !important
-    }
-a[href="/Elcaro"] {
-    background-position: -0px -0px
-    }
