--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -267,3 +267,13 @@ a[href|="/iseeham"] {
     background-repeat: no-repeat;
     background-image: url(%%iseeham%%)
     }
+
+a[href|="/male2"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 80px;
+    height: 96px;
+    background-repeat: no-repeat;
+    background-image: url(%%male2%%)
+    }
