--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -139,7 +139,7 @@ body.res-nightmode:first-of-type {
 /*Announce Box*/
 /* Make changes next to the 6 # in subreddit settings */
 /* NOT HERE. */
-
+/*
 body > .content { padding-top: 0px }
 
 .side .md h6 {
@@ -151,13 +151,12 @@ body > .content { padding-top: 0px }
     height: 20px;
     line-height: 20px;
     text-indent: 5px;
-/*    background: #E0E3E9;*/
     color: #000000;
     border: 0px solid;
     border-radius: 2px;
     padding-right: 5px;
     }
-
+*/
 /*===============Arrow Votes Change===============*/
 /*DC02 This code disables the downvote button. And makes upvotes cats. */
 /* Even for .res-nightmode, suck it Draze, all your votes are catvotes */
