--- a/source-css/ponyloungerts.css
+++ b/source-css/ponyloungerts.css
@@ -285,7 +285,7 @@ display: none
 }
 /*literally threaten downronners/downshysers*/
 #siteTable .entry.dislikes .buttons:before {
-content: "Ron Paul will literally fite you irl and wreck u m8";
+content: "fuck you rando stop downfluttering";
 color: blue;
 font-size: 7pt
 }
