--- a/source-css/scratchquisition.css
+++ b/source-css/scratchquisition.css
@@ -361,6 +361,15 @@ a[href|="/vsguns"]
     height: 170px;
 }
 
+a[href|="/rariscratchnuzzle"] 
+{
+ background-image: url(%%rariscratchnuzzle%%);
+    clear: none;
+    display: block;
+    float: left;
+    width: 281px;
+    height: 150px;
+}
 
 a[href|="/helixfossil"] 
 {
