--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -2165,3 +2165,23 @@ a[href|="/pinquay"] {
  background-image: url(%%spritesheet17%%);
  background-position: -0px -850px;
 } 
+
+a[href|="/tavisleepy"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 132px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -1000px;
+} 
+
+a[href|="/shutupandtaketavismoney"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 162px;
+ height: 150px;
+ background-image: url(%%spritesheet17%%);
+ background-position: -0px -1150px;
+} 
