--- a/source-css/trixquisition.css
+++ b/source-css/trixquisition.css
@@ -43,7 +43,7 @@ a[href|="/smugsmile"]     {background-position:-280px -0px}
 
 /*200px emotes*/
 
-a[href|="/notamusedtrixie"], a[href|="/wasthereeveranydoubt"], a[href|="/trixiesocks"], a[href|="/Trixiewillreku"]
+a[href|="/notamusedtrixie"], a[href|="/wasthereeveranydoubt"], a[href|="/trixiesocks"], a[href|="/Trixiewillreku"], a[href|="/thebestponyishappy"] 
 {
   display: block;
   clear: none;
@@ -59,6 +59,7 @@ a[href|="/notamusedtrixie"]      {background-position: -0px -0px}
 a[href|="/wasthereeveranydoubt"] {background-position: -200px -0px}
 a[href|="/trixiesocks"]          {background-position: -400px -0px}
 a[href|="/Trixiewillreku"]       {background-position: -600px -0px}
+a[href|="/thebestponyishappy"]     {background-position: -0px -200px}
 
 /*heterogeneous emotes*/
 
