--- a/source-css/appledashquisition.css
+++ b/source-css/appledashquisition.css
@@ -1,5 +1,12 @@
 body{background:url(%%adbackground%%) no-repeat fixed left center}
 
+a[href|="/adelbow"] {
+float:left;
+width:239px;
+height:210px;
+background-repeat:no-repeat;
+background-image:url(%%adelbow%%);
+}
 
 a[href|="/adnuzzle"] {
 float:left;
@@ -9,12 +16,156 @@ background-repeat:no-repeat;
 background-image:url(%%adnuzzle%%);
 }
 
+a[href|="/ejr1icgm1wsk26fb"] {
+float:left;
+width:450px;
+height:289px;
+background-repeat:no-repeat;
+background-image:url(%%ejr1icgm1wsk26fb%%);
+}
+
+a[href|="/theylooksoreadytofuckeachothersenseless"] {
+float:left;
+width:299px;
+height:167px;
+background-repeat:no-repeat;
+background-image:url(%%theylooksoreadytofuckeachothersenseless%%);
+}
+
+a[href|="/adreadyforbees"] {
+float:left;
+width:239px;
+height:209px;
+background-repeat:no-repeat;
+background-image:url(%%adreadyforbees%%);
+}
+
+a[href|="/adkissy"] {
+float:left;
+width:233px;
+height:182px;
+background-repeat:no-repeat;
+background-image:url(%%adkissy%%);
+}
+
+a[href|="/adfeed"] {
+float:left;
+width:223px;
+height:224px;
+background-repeat:no-repeat;
+background-image:url(%%adfeed%%);
+}
+
+a[href|="/adcuddle"] {
+float:left;
+width:201px;
+height:189px;
+background-repeat:no-repeat;
+background-image:url(%%adcuddle%%);
+}
+
+a[href|="/adglow"] {
+float:left;
+width:218px;
+height:203px;
+background-repeat:no-repeat;
+background-image:url(%%adglow%%);
+}
+
+a[href|="/adflank"] {
+float:left;
+width:245px;
+height:204px;
+background-repeat:no-repeat;
+background-image:url(%%adflank%%);
+}
+
+a[href|="/adpeck"] {
+float:left;
+width:207px;
+height:171px;
+background-repeat:no-repeat;
+background-image:url(%%adpeck%%);
+}
+
+a[href|="/adsleep"] {
+float:left;
+width:231px;
+height:216px;
+background-repeat:no-repeat;
+background-image:url(%%adsleep%%);
+}
+
+a[href|="/ajdribbles"] {
+float:left;
+width:236px;
+height:213px;
+background-repeat:no-repeat;
+background-image:url(%%ajdribbles%%);
+}
+
+a[href|="/admoustache"] {
+float:left;
+width:283px;
+height:177px;
+background-repeat:no-repeat;
+background-image:url(%%admoustache%%);
+}
+
+a[href|="/adbuttpillow"] {
+float:left;
+width:223px;
+height:223px;
+background-repeat:no-repeat;
+background-image:url(%%adbuttpillow%%);
+}
+
+a[href|="/adbath"] {
+float:left;
+width:225px;
+height:149px;
+background-repeat:no-repeat;
+background-image:url(%%adbath%%);
+}
+
+a[href|="/adbored"] {
+float:left;
+width:225px;
+height:145px;
+background-repeat:no-repeat;
+background-image:url(%%adbored%%);
+}
+
 a[href|="/adpuckerup"] {
     float:left;
     width:226px;
     height:222px;
     background-repeat:no-repeat;
     background-image:url(%%adpuckerup%%);
+}
+
+a[href|="/adscared"] {
+    float:left;
+    width:226px;
+    height:222px;
+    background-repeat:no-repeat;
+    background-image:url(%%adscared%%);
+}
+
+a[href|="/adfinishline"] {
+    float:left;
+    width:225px;
+    height:107px;
+    background-repeat:no-repeat;
+    background-image:url(%%adfinishline%%);
+}
+
+a[href|="/addesire"] {
+    float:left;
+    width:256px;
+    height:128px;
+    background-repeat:no-repeat;
+    background-image:url(%%addesire%%);
 }
 
 a[href|="/adsad"] {
@@ -104,12 +255,28 @@ a[href|="/admaredown"] {
     background-image:url(%%admaredown%%);
 }
 
+a[href|="/highhoof3"] {
+    float:left;
+    width:283px;
+    height:177px;
+    background-repeat:no-repeat;
+    background-image:url(%%highhoof3%%);
+}
+
 a[href|="/adwingboner"] {
     float:left;
     width:225px;
     height:201px;
     background-repeat:no-repeat;
     background-image:url(%%adwingboner%%);
+}
+
+a[href|="/addespair"] {
+    float:left;
+    width:225px;
+    height:201px;
+    background-repeat:no-repeat;
+    background-image:url(%%addespair%%);
 }
 
 a[href|="/adcuddles"] {
@@ -160,6 +327,22 @@ a[href|="/adsocks"] {
     background-image:url(%%adsocks%%);
 }
 
+a[href|="/canada"] {
+    float:left;
+    width:512px;
+    height:342px;
+    background-repeat:no-repeat;
+    background-image:url(%%canada%%);
+}
+
+a[href|="/sweden"] {
+    float:left;
+    width:555px;
+    height:360px;
+    background-repeat:no-repeat;
+    background-image:url(%%sweden%%);
+}
+
 a[href|="/adkiss"] {
     float:left;
     width:257px;
@@ -196,9 +379,21 @@ a.author[href$="Just_a_temporary_acc"]:before{
 font-size:10px!important;
 visibility:visible!important;
 }
-a.author[href$="Just_a_temporary_acc"]:before {content:"BigMacIsNotABurger"}
+a.author[href$="Just_a_temporary_acc"]:before {content:"BigMaclsNotABurger"}
 
 /*Hi Burchy <3 | Hi there <3*/ 
+
+a.author[href$="BigMaclsNotABurger"] {
+font-size:0!important;
+overflow:hidden;
+display:inline-block;
+content: "";
+}
+a.author[href$="BigMaclsNotABurger"]:before{
+font-size:10px!important;
+visibility:visible!important;
+}
+a.author[href$="BigMaclsNotABurger"]:before {content:"BurChaBow"}
 
 a.author[href$="BigMacIsNotABurger"] {
 font-size:0!important;
@@ -210,4 +405,4 @@ a.author[href$="BigMacIsNotABurger"]:before{
 font-size:10px!important;
 visibility:visible!important;
 }
-a.author[href$="BigMacIsNotABurger"]:before {content:"BurChaBow"}
+a.author[href$="BigMacIsNotABurger"]:before {content:"Maccy's Dead Account"}
