--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -430,13 +430,13 @@ a[href|="/lpstretch"]{ background-position: -200px -980px; width: 171px; height:
 a[href|="/lpdisgust"]{ background-position: -200px -1180px; width: 146px; height: 150px; }
 a[href|="/lpheroic"]{ background-position: -200px -1380px; width: 123px; height: 150px; }
 
-a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"], a[href|="/stablebuck"], a[href|="/bjwhy"], a[href|="/lpsmirk"], a[href|="/velvetsmirk"], a[href|="/bjsmirk"], a[href|="/bjlongface"], a[href|="/bjsilly"], a[href|="/bjfillygrumpy"]
+a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"], a[href|="/lpsup"], a[href|="/pyrelight"], a[href|="/lpconfident"], a[href|="/bjshrug"], a[href|="/velvetshrug"], a[href|="/bjdisgust"], a[href|="/gloryfun"], a[href|="/velvetbedroomeyes"], a[href|="/stablebuck"], a[href|="/bjwhy"], a[href|="/lpsmirk"], a[href|="/velvetsmirk"], a[href|="/bjsmirk"], a[href|="/bjlongface"], a[href|="/bjsilly"], a[href|="/bjfillygrumpy"], a[href|="/calamityangry"], a[href|="/calamityhandsome"], a[href|="/velvetparty"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em7-v15%%);
+background-image: url(%%foe-em7-v16%%);
 }
 a[href|="/lpdowncast"]{ background-position: -0px -0px; width: 172px; height: 150px; }
 a[href|="/steelhoovesrear"]{ background-position: 0 -200px; width: 120px; height: 175px; }
@@ -457,6 +457,9 @@ a[href|="/bjsmirk"]{ background-position: -294px -500px; width: 76px; height: 10
 a[href|="/bjlongface"]{ background-position: -294px -650px; width: 70px; height: 80px; }
 a[href|="/bjsilly"]{ background-position: -294px -780px; width: 64px; height: 100px; }
 a[href|="/bjfillygrumpy"]{  background-position: -294px -930px; width: 130px; height: 130px; }
+a[href|="/calamityangry"]{  background-position: -294px -1110px; width: 150px; height: 133px; }
+a[href|="/calamityhandsome"]{  background-position: -294px -1293px; width: 150px; height: 149px; }
+a[href|="/velvetparty"]{  background-position: -294px -1492px; width: 150px; height: 89px; }
 
 a[href|="/advicebj"]
 {
