Stylesheet/emote/tag updates 2014-03-03

--- a/source-css/appledashquisition.css
+++ b/source-css/appledashquisition.css
@@ -146,8 +146,8 @@ a[href|="/adpuckerup"] {
 
 a[href|="/adscared"] {
     float:left;
-    width:226px;
-    height:222px;
+    width:254px;
+    height:197px;
     background-repeat:no-repeat;
     background-image:url(%%adscared%%);
 }
@@ -257,8 +257,8 @@ a[href|="/admaredown"] {
 
 a[href|="/highhoof3"] {
     float:left;
-    width:283px;
-    height:177px;
+    width:225px;
+    height:149px;
     background-repeat:no-repeat;
     background-image:url(%%highhoof3%%);
 }
@@ -274,7 +274,7 @@ a[href|="/adwingboner"] {
 a[href|="/addespair"] {
     float:left;
     width:225px;
-    height:201px;
+    height:162px;
     background-repeat:no-repeat;
     background-image:url(%%addespair%%);
 }
@@ -367,8 +367,8 @@ a[href|="/burchabow"] {
     background-image:url(%%burchabow%%);
 }
 
-/* Other Stuff */
-
+/* Other Stuff (commenting out some so we don't confuse Great BPM Leader Typhos */
+/*
 a.author[href$="Just_a_temporary_acc"] {
 font-size:0!important;
 overflow:hidden;
@@ -380,9 +380,9 @@ font-size:10px!important;
 visibility:visible!important;
 }
 a.author[href$="Just_a_temporary_acc"]:before {content:"BigMaclsNotABurger"}
-
+*/
 /*Hi Burchy <3 | Hi there <3*/ 
-
+/*
 a.author[href$="BigMaclsNotABurger"] {
 font-size:0!important;
 overflow:hidden;
@@ -394,7 +394,7 @@ font-size:10px!important;
 visibility:visible!important;
 }
 a.author[href$="BigMaclsNotABurger"]:before {content:"BurChaBow"}
-
+*/
 a.author[href$="BigMacIsNotABurger"] {
 font-size:0!important;
 overflow:hidden;
